<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/allbg"
    android:orientation="vertical">

    <include layout="@layout/comm_toolbar" />

    <LinearLayout
        style="@style/ll_content_style"
        android:background="@color/white">

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_tmh" />

            <TextView
                android:id="@+id/scmid"
                style="@style/wj_r_t"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_checked"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="left|center_vertical"
                android:textColor="@color/red" />
        </LinearLayout>


        <include layout="@layout/view_height" />

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="物料编码:" />

            <TextView
                android:id="@+id/materialid"
                style="@style/wj_r_t" />
        </LinearLayout>

        <include layout="@layout/view_line_left_spcing" />

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="物料名称:" />

            <TextView
                android:id="@+id/material"
                style="@style/wj_r_t"
                android:singleLine="false"
                android:textColor="#008ED9" />
        </LinearLayout>

        <include layout="@layout/view_line_left_spcing" />

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="规格型号:" />

            <TextView
                android:id="@+id/specmodel"
                style="@style/wj_r_t" />
        </LinearLayout>

        <include layout="@layout/view_line_left_spcing" />

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_pch" />

            <TextView
                android:id="@+id/batchcode"
                style="@style/wj_r_t" />
        </LinearLayout>

        <include layout="@layout/view_line_left_spcing" />

        <LinearLayout
            style="@style/wj_ll_style"
            android:gravity="center_vertical">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_kf" />

            <TextView
                android:id="@+id/tv_kf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btn_select"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="12dp"
                android:src="@drawable/kufang" />

        </LinearLayout>

        <include layout="@layout/view_line_left_spcing" />

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_rks" />

            <TextView
                android:id="@+id/allnums"
                style="@style/wj_r_t" />
        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/bt_confi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/wj_confirm"
        android:text="提交"
        android:textColor="@color/white"
        android:visibility="invisible" />

</LinearLayout>