<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/allbg"
    android:orientation="vertical">

    <include layout="@layout/comm_toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_bmen" />

            <TextView
                android:id="@+id/manudept"
                style="@style/wj_r_t" />

            <TextView
                android:id="@+id/tv_checked"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="right|center_vertical"
                android:textColor="@color/red" />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/allbg" />

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="物料编码:" />

            <TextView
                android:id="@+id/materialid"
                style="@style/wj_r_t" />
        </LinearLayout>

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="物料名称:" />

            <TextView
                android:id="@+id/material"
                style="@style/wj_r_t"
                android:textColor="#008ED9" />
        </LinearLayout>

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="规格型号:" />

            <TextView
                android:id="@+id/specmodel"
                style="@style/wj_r_t" />
        </LinearLayout>

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_sl" />

            <TextView
                android:id="@+id/nums"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="@string/r_t_pch" />

            <TextView
                android:id="@+id/batchnum"
                style="@style/wj_r_t"
                android:textColor="@color/red" />
        </LinearLayout>


        <LinearLayout style="@style/wj_ll_style">

            <TextView
                style="@style/wj_l_t"
                android:text="仓区库位:" />

            <TextView
                android:id="@+id/define2"
                style="@style/wj_r_t"
                android:textColor="@color/red" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/wj_confirm"
            android:gravity="center"
            android:text="出库"
            android:textColor="@color/white"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>