<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/allbg"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/comm_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <LinearLayout style="@style/ll_content_style">

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="@string/r_t_tmh" />

                    <TextView
                        android:id="@+id/scmid"
                        style="@style/wj_r_t" />

                    <TextView
                        android:id="@+id/tv_checked"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="left|center_vertical"
                        android:textColor="@color/red" />
                </LinearLayout>

                <include layout="@layout/view_line_left_spcing" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="@string/r_t_gys" />

                    <TextView
                        android:id="@+id/supply"
                        style="@style/wj_r_t"
                        android:singleLine="false" />


                </LinearLayout>

                <include layout="@layout/view_line_left_spcing" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="供应商编号:" />

                    <TextView
                        android:id="@+id/suid"
                        style="@style/wj_r_t"
                        android:singleLine="false" />
                </LinearLayout>

                <include layout="@layout/view_height" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="物料编码:" />

                    <TextView
                        android:id="@+id/materialid"
                        style="@style/wj_r_t" />
                </LinearLayout>

                <include layout="@layout/view_line_left_spcing" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="物料名称:" />

                    <TextView
                        android:id="@+id/material"
                        style="@style/wj_r_t"
                        android:singleLine="false"
                        android:textColor="#008ED9" />
                </LinearLayout>

                <include layout="@layout/view_line_left_spcing" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="规格型号:" />

                    <TextView
                        android:id="@+id/specmodel"
                        style="@style/wj_r_t" />
                </LinearLayout>

                <include layout="@layout/view_line_left_spcing" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="@string/r_t_pch" />

                    <TextView
                        android:id="@+id/batchcode"
                        style="@style/wj_r_t" />
                </LinearLayout>

                <include layout="@layout/view_line_left_spcing" />

                <LinearLayout style="@style/wj_ll_style">

                    <TextView
                        style="@style/wj_l_t"
                        android:text="@string/r_t_rks" />

                    <TextView
                        android:id="@+id/allnums"
                        style="@style/wj_r_t" />
                </LinearLayout>


            </LinearLayout>

            <include layout="@layout/view_height" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/r_t_hgs"
                    android:textColor="#5FB732" />

                <EditText
                    android:id="@+id/ed_hg"
                    android:layout_width="70dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"
                    android:enabled="false"
                    android:textColor="@color/textcolor"
                    android:gravity="left|center_vertical"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="不合格数:"
                    android:textColor="#F89C16"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ed_bhg"
                    android:layout_width="70dp"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="请输入"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textcolor"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>


            <Button
                android:id="@+id/bt_confi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/wj_confirm"
                android:text="提交"
                android:textColor="@color/white"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>